White space fixed!

--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,10 @@
 body, html {
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
+    overflow-x:hidden;
 }
 
 body {
-    margin: 0;
     font-family: 'Space Mono', monospace;
     font-size: 24px;
     background-color: var(--clr-light);
